<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/private_files_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#CCCCCC"
        android:padding="5dp" >

        <Button
            android:id="@+id/private_files_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EDEDED"
            android:padding="5dp"
            android:text="@string/private_files_button_title"
            android:textColor="#53B73B"
            android:textSize="24sp"
            android:textAllCaps="false" />

    </LinearLayout>

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/private_files_bottom_bar"
        android:background="#FFffffff"
        android:cacheColorHint="#000000"
        android:divider="#FFcccccc"
        android:dividerHeight="1dp" />

    <LinearLayout
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#FFFFFF">
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/add_button"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/img_dsc_add_button"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
	        android:text="@string/list_view_empty"
	        android:textColor="#474747"
	        android:textSize="38sp" />
        
    </LinearLayout>
    
</RelativeLayout>